Test append command

--- a/info.plist
+++ b/info.plist
@@ -19,6 +19,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>9D0DA3D7-B307-48B2-8009-31FD6E3F4EDD</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>2505A93A-CEC0-4915-98E6-0EA761DED78E</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>ABD8F7EB-A721-4C12-A5CA-C6441F954E1A</key>
 		<array>
 			<dict>
@@ -160,6 +173,55 @@
 			<key>version</key>
 			<integer>3</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>alfredfiltersresults</key>
+				<false/>
+				<key>alfredfiltersresultsmatchmode</key>
+				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<true/>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>0</integer>
+				<key>escaping</key>
+				<integer>0</integer>
+				<key>keyword</key>
+				<string>log</string>
+				<key>queuedelaycustom</key>
+				<integer>3</integer>
+				<key>queuedelayimmediatelyinitially</key>
+				<true/>
+				<key>queuedelaymode</key>
+				<integer>1</integer>
+				<key>queuemode</key>
+				<integer>1</integer>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>script</key>
+				<string></string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string>.venv/bin/noteplan-log</string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string>Checking Calendar</string>
+				<key>type</key>
+				<integer>8</integer>
+				<key>withspace</key>
+				<true/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.input.scriptfilter</string>
+			<key>uid</key>
+			<string>9D0DA3D7-B307-48B2-8009-31FD6E3F4EDD</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string></string>
@@ -168,16 +230,23 @@
 		<key>2505A93A-CEC0-4915-98E6-0EA761DED78E</key>
 		<dict>
 			<key>xpos</key>
-			<integer>450</integer>
+			<integer>445</integer>
 			<key>ypos</key>
-			<integer>165</integer>
+			<integer>140</integer>
 		</dict>
 		<key>51BDCA32-A81C-47DE-9E0B-82D182BF0F7A</key>
 		<dict>
 			<key>xpos</key>
-			<integer>210</integer>
+			<integer>205</integer>
 			<key>ypos</key>
-			<integer>225</integer>
+			<integer>200</integer>
+		</dict>
+		<key>9D0DA3D7-B307-48B2-8009-31FD6E3F4EDD</key>
+		<dict>
+			<key>xpos</key>
+			<integer>205</integer>
+			<key>ypos</key>
+			<integer>335</integer>
 		</dict>
 		<key>ABD8F7EB-A721-4C12-A5CA-C6441F954E1A</key>
 		<dict>
